got the local storage to work

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <div class="container m-auto">
       <!-- Timeblocks go here -->
-      <div class="row m-auto">
+      <div class="row m-auto" id="9">
         <div class="col-2 hour text-right">
           <p><span>9</span>AM</p>
         </div>
@@ -41,7 +41,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="10" >
         <div class="col-2 hour text-right">
           <p><span>10</span>AM</p>
         </div>
@@ -52,7 +52,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="11">
         <div class="col-2 hour text-right">
           <p><span>11</span>AM</p>
         </div>
@@ -63,7 +63,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="12">
         <div class="col-2 hour text-right">
           <p><span>12</span>PM</p>
         </div>
@@ -74,7 +74,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="13">
         <div class="col-2 hour text-right">
           <p><span>1</span>PM</p>
         </div>
@@ -85,7 +85,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="14">
         <div class="col-2 hour text-right">
           <p><span>2</span>PM</p>
         </div>
@@ -96,7 +96,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto"vid="15">
         <div class="col-2 hour text-right">
           <p><span>3</span>PM</p>
         </div>
@@ -107,7 +107,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="16">
         <div class="col-2 hour text-right">
           <p><span>4</span>PM</p>
         </div>
@@ -118,7 +118,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto">
+      <div class="row m-auto" id="17">
         <div class="col-2 hour text-right">
           <p><span>5</span>PM</p>
         </div>
