set up to pull from local storage and write the items to the page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <i class="fas fa-save"></i>
         </div>
       </div>
-      <div class="row m-auto"vid="15">
+      <div class="row m-auto" id="15">
         <div class="col-2 hour text-right">
           <p><span>3</span>PM</p>
         </div>
